--- a/scss/_toggle-button.scss
+++ b/scss/_toggle-button.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     transition: all .3s .2s;
+    cursor: pointer;
 
     &__circle
     {
@@ -31,28 +32,5 @@
         border-radius: 100px;
         margin: 0 3px;
         transition: all .3s ease-out;
-    }
-}
-
-@media (max-width: 670px)
-{
-    .toggle-button
-    {
-        &:checked + label .button__circle
-        {
-            transform: translateX(24px);
-        }
-    }
-
-    .button
-    {
-        height: 30px;
-        width: 55px;
-
-        &__circle
-        {
-            height: 25px;
-            width: 25px;
-        }
     }
 }
