--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   transition: all 0.3s 0.2s;
+  cursor: pointer;
 }
 .button__circle {
   height: 15px;
@@ -24,18 +25,4 @@
   border-radius: 100px;
   margin: 0 3px;
   transition: all 0.3s ease-out;
-}
-
-@media (max-width: 670px) {
-  .toggle-button:checked + label .button__circle {
-    transform: translateX(24px);
-  }
-  .button {
-    height: 30px;
-    width: 55px;
-  }
-  .button__circle {
-    height: 25px;
-    width: 25px;
-  }
 }/*# sourceMappingURL=main.css.map */
